# node-health

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  check-lint-test.yaml
src/: env.rs  execution_node.rs  geth.rs  lib.rs  lighthouse.rs  log.rs  main.rs  server.rs
tests/: integration.rs  live_integration.rs
