[package]
name = "node-health"
version = "0.2.0"
edition = "2021"
default-run = "node-health"

# Here to support the Docker build.
[[bin]]
name = "node-health"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = [
	"backtrace",
	"std",
] }
axum = { version = "0.6.20", default-features = false, features = [
	"json",
	"tokio",
	"http1",
] }
lazy_static = { version = "1.4.0", default-features = false }
reqwest = { version = "0.11.22", default-features = false, features = ["json"] }
serde = { version = "1.0.193", default-features = false, features = [
	"derive",
	"std",
] }
serde_json = { version = "1.0.108", default-features = false, features = [
	"std",
] }
tokio = { version = "1.34.0", default-features = false, features = [
	"macros",
	"rt-multi-thread",
	"rt",
] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
	"alloc",
	"ansi",
	"env-filter",
	"json",
] }
